2022-05-13T16:38:13Z:
* notice: last 14d: all unq: 4371 26
* notice: prev accum: outdated-all outdated-unq / all unq: 17617 435 / 21925 538
* notice: next accum: outdated-all outdated-unq / all unq: 17617 435 / 21988 538
* notice: prev json diff / prev day diff: unq all: +0 +124 -0 -61 / +2 +349 -0 -162

2022-05-13T08:28:56Z:
* notice: last 14d: all unq: 4308 26
* notice: prev accum: outdated-all outdated-unq / all unq: 17617 435 / 21863 536
* notice: next accum: outdated-all outdated-unq / all unq: 17617 435 / 21925 538
* notice: prev json diff / prev day diff: unq all: +2 +119 -0 -57 / +2 +225 -0 -101

2022-05-13T02:10:59Z:
* notice: last 14d: all unq: 4246 26
* notice: prev accum: outdated-all outdated-unq / all unq: 17440 434 / 21641 536
* notice: next accum: outdated-all outdated-unq / all unq: 17617 435 / 21863 536
* notice: prev json diff / prev day diff: unq all: +0 +106 -0 -44 / +0 +106 -0 -44

2022-05-12T16:38:32Z:
* notice: last 14d: all unq: 4201 26
* notice: prev accum: outdated-all outdated-unq / all unq: 17440 434 / 21576 536
* notice: next accum: outdated-all outdated-unq / all unq: 17440 434 / 21641 536
* notice: prev json diff / prev day diff: unq all: +0 +126 -0 -61 / +18 +668 -0 -160

2022-05-12T08:30:17Z:
* notice: last 14d: all unq: 4136 26
* notice: prev accum: outdated-all outdated-unq / all unq: 17440 434 / 21499 532
* notice: next accum: outdated-all outdated-unq / all unq: 17440 434 / 21576 536
* notice: prev json diff / prev day diff: unq all: +4 +132 -0 -55 / +18 +542 -0 -99

2022-05-12T02:03:35Z:
* notice: last 14d: all unq: 4059 26
* notice: prev accum: outdated-all outdated-unq / all unq: 17263 433 / 21089 518
* notice: next accum: outdated-all outdated-unq / all unq: 17440 434 / 21499 532
* notice: prev json diff / prev day diff: unq all: +14 +410 -0 -44 / +14 +410 -0 -44

2022-05-11T02:03:39Z:
* notice: last 14d: all unq: 3826 24
* notice: prev accum: outdated-all outdated-unq / all unq: 17084 432 / 20866 518