@@ -1,11 +1,11 @@
 {
-  "timestamp" : "2022-05-13T16:38:13Z",
-  "count" : 243,
-  "count_minmax" : [ 0, 243 ],
+  "timestamp" : "2022-05-14T02:14:28Z",
+  "count" : 353,
+  "count_minmax" : [ 0, 353 ],
   "count_prev_day_inc" : 349,
   "count_prev_day_dec" : 162,
-  "uniques" : 2,
-  "uniques_minmax" : [ 0, 2 ],
+  "uniques" : 5,
+  "uniques_minmax" : [ 0, 5 ],
   "uniques_prev_day_inc" : 2,
   "uniques_prev_day_dec" : 0
 }
