@@ -1,0 +1,11 @@
+{
+  "timestamp" : "2022-05-14T02:14:28Z",
+  "count" : 0,
+  "count_minmax" : [ 0, 0 ],
+  "count_prev_day_inc" : 110,
+  "count_prev_day_dec" : 44,
+  "uniques" : 0,
+  "uniques_minmax" : [ 0, 0 ],
+  "uniques_prev_day_inc" : 3,
+  "uniques_prev_day_dec" : 0
+}
