@@ -1,15 +1,10 @@
 {
-  "count": 4371,
+  "count": 4420,
   "uniques": 26,
   "clones": [
     {
-      "timestamp": "2022-04-29T00:00:00Z",
-      "count": 17,
-      "uniques": 1
-    },
-    {
       "timestamp": "2022-04-30T00:00:00Z",
-      "count": 203,
+      "count": 159,
       "uniques": 10
     },
     {
@@ -74,8 +69,8 @@
     },
     {
       "timestamp": "2022-05-13T00:00:00Z",
-      "count": 243,
-      "uniques": 2
+      "count": 353,
+      "uniques": 5
     }
   ]
 }
